@@ -476,14 +476,43 @@ rxvt_color::free (rxvt_display *display)
 rxvt_color
 rxvt_color::fade (rxvt_display *display, int percent)
 {
+  percent = 100 - percent;
+
   unsigned short cr, cg, cb;
   rxvt_color faded;
 
   get (display, cr, cg, cb);
-  faded.set (display,
-             cr * percent / 100,
-             cg * percent / 100,
-             cb * percent / 100);
+
+  faded.set (
+    display,
+    cr * percent / 100,
+    cg * percent / 100,
+    cb * percent / 100
+  );
+
+  return faded;
+}
+
+#define LERP(a,b,p) (a * p / 100 + b * (100 - p) / 100)
+
+rxvt_color
+rxvt_color::fade (rxvt_display *display, int percent, rxvt_color &fadeto)
+{
+  percent = 100 - percent;
+
+  unsigned short cr, cg, cb;
+  unsigned short fcr, fcg, fcb;
+  rxvt_color faded;
+  
+  get (display, cr, cg, cb);
+  fadeto.get(display, fcr, fcg, fcb);
+
+  faded.set (
+    display,
+    LERP (cr, fcr, percent),
+    LERP (cg, fcg, percent),
+    LERP (cb, fcb, percent)
+  );
 
   return faded;
 }
