@@ -15,6 +15,10 @@ WISH: OnTheSpot editing, or maybe switch to miiiiiiif
 WISH: tabbed windows (hey, just use screen...)
 WISH: just for fun, do shade and tint with XRender.
 
+        - INCOMPATIBLE CHANGE: -fade changed it's meaning to comply with
+          the documentation and common sense: when upgrading, replace your
+          percentage by 100-percentage.
+        - integrated "fade to specific colour" patch by Martin Parm.
         - slow down the internal visual bell (delay by 20ms) and update
           the terminfo flash code to use the same delay.  This is
           synchronous, so many bells might inhibit screen updates in other
